first ST Commit

--- a/css/index.html
+++ b/css/index.html
@@ -28,9 +28,7 @@
     <div id="zdjecie"><img src="wrz.jpg"></div>
 
     <header>
-        <h1>
-            <a href='Machina.jnlp'>Curriculum Vitae</a>
-        </h1>
+        <h1>Curriculum Vitae</h1>
     </header>
 
     <h2>PERSONAL DETAILS</h2>
@@ -92,13 +90,11 @@
     <div class="wiersz">
             <div class="kol-1-b">
                 <p class="wys">
-                    2015-now</br>
-                    </br></br>
-                    2016</br>
-                    </br></br>
-                    2015</br></br>
+                    2015</br>
+                    </br>
                     2014-now</br>
                 </br>
+                    2013</br>
                     2013</br>
                     2013</BR>
                     2012-2013</br>
@@ -110,15 +106,12 @@
             </div>
             <div class="kol-2-b">
                 <p>
-                    <b>JAVA DEVELOPER - National Police Headquarters, Warszawa</b></br>
-                    Outsourcing project organized by <b>Nexio Management</b>. Developing and maintaining reporting system of Police (SESPol) - front-end, back-end.</br>
-                    <b>SOFTWARE DEVELOPER - GMC Software, Warszawa / Barcelona</b></br>
-                    Outsourcing project organized by <b>Nexio Management</b>. Building tools to generating documents for banking and insurance sector. Work in an international team. </br>
                     <b>SOFTWARE TESTER / Single - RAN TESTER - Nokia Solutions and Networks, </b>  </BR>Wrocław  Nokia Academy 5 Edition</br>
                     <b>WEB DESIGNER / WEBSITE ADMINISTRATOR</b> for Artist Natalia Pospieszalska:</br>
                     <a href="http://www.nataliapospieszalska.pl"><b>&bullet; &nbsp &nbsp</b>www.nataliapospieszalska.pl</a></br>
                     <b>MOBILE APPLICATION DEVELOPER</b> - own projects</br> 
-                    ELECTRICIAN, Oslo, Norwegia</br> 
+                    ELECTRICIAN, Oslo, Norwegia</br>
+                    PARTICIPANT OF SCIENTIFIC ASSOCIATION, Audio Engineering Society</br>
                     RECORD PRODUCER / SOUND ENGINEER:</br>
                     <b>&bullet; &nbsp &nbsp</b>Akademickie Radio Luz, Wroclaw</br>
                     <b>&bullet; &nbsp &nbsp</b>Katolickie Radio Zamosc, Zamosc (apprenticeship)</br> 
@@ -129,7 +122,6 @@
             </div>
     </div>
 
- 
     <h2>PERSONAL DEVELOPMENT</h2>
     <div class="wiersz">
         <div class="kol-11">
@@ -139,9 +131,10 @@
         </div>
         <div class="kol-12-2">
             <p>
+                Programming Mobile Applications for Android Handheld Systems, University of Maryland - Coursea.com</br>
+                HTML and CSS, Make an Interactive Website (JS / jQuery) - CodeCademy.com</br>
                 Engineer and Master's degree of Electronics and Telecommunication</br>
                 CCENT, CCNA Routing and Swithching, CCNA Security (last without a certificate)</br>
-                HTML and CSS, Make an Interactive Website (JS / jQuery) - CodeCademy.com</br>
                 Driver's license 'B'
             </p>
         </div>
@@ -158,9 +151,9 @@
             <p>
                 <b>&bullet; &nbsp &nbsp</b>ENGLISH (B2 level) – fluent, GERMAN (A1 level) – basic, POLISH – native, Russian – basic
             </br>
-            <b>&bullet; &nbsp &nbspJava SE / EE, SQL, HTML, CSS, JSP, Struts 2, TortoiseSVN</b></br>
+            <b>&bullet; &nbsp &nbsp</b>HTML5, CSS3</br>
+            <b>&bullet; &nbsp &nbsp</b>Java SE / EE, MATLAB, C, C++, UNIX</br>
             <b>&bullet; &nbsp &nbspGSM / EDGE, WCDMA, HSDPA / HSUPA, LTE / LTE-Advanced</b> </br>
-            <b>&bullet; &nbsp &nbsp</b>Tomcat, TCP / IP, Linux, MATLAB</br>
             <b>&bullet; &nbsp &nbsp</b>NetBeans, Eclipse ADT, Android Studio, Builder C++, Visual Studio, Git / GitHub </br>
             <b>&bullet; &nbsp &nbsp</b>PSpice, Packet Tracer, Wireshark, Adobe Photoshop, Adobe Dreamweaver, AutoCAD </br>
         </div>               
@@ -180,11 +173,10 @@
         </br>
         </br>
         </br>
-        </br>
         <div id="adnotacja1">
         <p>
             I hereby agree for processing my personal information included in my offer strictly for the purposes of job recruitment in accordance</br>
-            with the act on protection of personal data (issued 29 th August 1997, consolidated text:  Dz. U. z 2002r. Nr 101, poz. 926 ze zm.).
+            with the act on protection of personal data (issued 29 th August 1997, published in Dziennik Ustaw no. 133 item 833.
         </p>
     </div>
     </div>
@@ -202,23 +194,19 @@
 
          <h3>Knowlage of:</h3>
          <p>
-            <b>• &nbsp &nbsp</b> Java SE /EE</br>
-            <b>• &nbsp &nbsp</b> Structured Query Language (SQL)</br>
-            <b>• &nbsp &nbsp</b> Unified Modeling Language (UML)</br>
-            <b>• &nbsp &nbsp</b> Git / GitHub </br>
-            <b>• &nbsp &nbsp</b> Linux / UNIX</br>
-            <b>• &nbsp &nbsp</b> TCP / IP</br>
-            <b>• &nbsp &nbsp</b> HTML, CSS </br>
+            <b>• &nbsp &nbsp</b> Java SE, Java EE (basic)</br>
             <b>• &nbsp &nbsp</b> MATLAB, Praat Framework</br>
-            <b>• &nbsp &nbsp</b> SW / HW testing</br>
-            <b>• &nbsp &nbsp</b> Software design patterns </br>
+            <b>• &nbsp &nbsp</b> good theoretical knowledge of SW / HW testing</br>
+            <b>• &nbsp &nbsp</b>  Linux / UNIX, Windows</br>
+            <b>• &nbsp &nbsp</b> Knowledge of TCP / IP Protocols
         </p>
         <h3>Basic knowlage:</h3>    
         <p>
-            <b>• &nbsp &nbsp</b> Hibernate</br> 
-            <b>• &nbsp &nbsp</b> Spring</br> 
-            <b>• &nbsp &nbsp</b> PrimeFaces</br> 
+            <b>• &nbsp &nbsp</b> Design patterns </br>
+            <b>• &nbsp &nbsp</b> Unified Modeling Language (UML)</br>
+            <b>• &nbsp &nbsp</b> Robot Framework </br>
             <b>• &nbsp &nbsp</b> Android Platform </br>
+            <b>• &nbsp &nbsp</b> Structured Query Language (SQL), (started to learn)  </br>
             <b>• &nbsp &nbsp</b> C / C++</br>
         </p>
     </div>
@@ -280,7 +268,7 @@
     <div id="adnotacja2">
         <p>
             I hereby agree for processing my personal information included in my offer strictly for the purposes of job recruitment in accordance</br>
-            with the act on protection of personal data (issued 29 th August 1997, consolidated text:  Dz. U. z 2002r. Nr 101, poz. 926 ze zm.).
+            with the act on protection of personal data (issued 29 th August 1997, published in Dziennik Ustaw no. 133 item 833.
         </p>
     </div>
 
