--- a/print/index.html
+++ b/print/index.html
@@ -29,7 +29,7 @@
 
     <header>
         <h1>
-            <a href='Machina.jnlp'>Curriculum Vitae</a>
+            Curriculum Vitae
         </h1>
     </header>
 
@@ -100,7 +100,6 @@
                     2014-now</br>
                 </br>
                     2013</br>
-                    2013</BR>
                     2012-2013</br>
                     </br>
                     </br>
@@ -153,7 +152,7 @@
             <p>
                 <b>&bullet; &nbsp &nbsp</b>ENGLISH (B2 level) – fluent, GERMAN (A1 level) – basic, POLISH – native, Russian – basic
             </br>
-            <b>&bullet; &nbsp &nbspJava SE / EE, SQL, HTML, CSS, JSP, Struts 2, TortoiseSVN</b></br>
+            <b>&bullet; &nbsp &nbspJava SE / EE, SQL, HTML, CSS, JSP, Spring, Hibernate, TortoiseSVN</b></br>
             <b>&bullet; &nbsp &nbspGSM / EDGE, WCDMA, HSDPA / HSUPA, LTE / LTE-Advanced</b> </br>
             <b>&bullet; &nbsp &nbsp</b>Tomcat, TCP / IP, Linux, MATLAB</br>
             <b>&bullet; &nbsp &nbsp</b>NetBeans, Eclipse ADT, Android Studio, Builder C++, Visual Studio, Git / GitHub </br> 
@@ -176,10 +175,10 @@
         </br>
         </br>
         <div id="adnotacja1">
-        <p>
+   <!--      <p>
             I hereby agree for processing my personal information included in my offer strictly for the purposes of job recruitment in accordance</br>
             with the act on protection of personal data (issued 29 th August 1997, consolidated text:  Dz. U. z 2002r. Nr 101, poz. 926 ze zm.).
-        </p>
+        </p> -->
     </div>
     </div>
 
@@ -196,22 +195,20 @@
 
          <h3>Knowlage of:</h3>
          <p>
-            <b>• &nbsp &nbsp</b> Java SE /EE</br>
-            <b>• &nbsp &nbsp</b> Structured Query Language (SQL)</br>
-            <b>• &nbsp &nbsp</b> Unified Modeling Language (UML)</br>
-            <b>• &nbsp &nbsp</b> Git / GitHub </br>
-            <b>• &nbsp &nbsp</b> Linux / UNIX</br>
-            <b>• &nbsp &nbsp</b> TCP / IP</br>
-            <b>• &nbsp &nbsp</b> HTML, CSS </br>
+            <b>• &nbsp &nbsp</b> Java SE / EE</br>
+            <b>• &nbsp &nbsp</b> JSP / JSF / Struts 2</br>
+            <b>• &nbsp &nbsp</b> Tomcat / Git / TortoiseSVN / SourceTree </br>
+            <b>• &nbsp &nbsp</b> Linux / UNIX / TCP / IP</br>
             <b>• &nbsp &nbsp</b> MATLAB, Praat Framework</br>
             <b>• &nbsp &nbsp</b> SW / HW testing</br>
             <b>• &nbsp &nbsp</b> Software design patterns </br>
         </p>
         <h3>Basic knowlage:</h3>    
         <p>
-            <b>• &nbsp &nbsp</b> Hibernate</br> 
             <b>• &nbsp &nbsp</b> Spring</br> 
+            <b>• &nbsp &nbsp</b> Hibernate</br> 
             <b>• &nbsp &nbsp</b> PrimeFaces</br> 
+            <b>• &nbsp &nbsp</b> JavaScript</br> 
             <b>• &nbsp &nbsp</b> Android Platform </br>
             <b>• &nbsp &nbsp</b> C / C++</br>
         </p>
@@ -245,7 +242,6 @@
                 &nbsp &nbsp &nbsp &nbspHandovers, Quality of Service in LTE</br>
                 <b>• &nbsp &nbsp</b> modulation (e.g. PSK, QAM, OFDM) and quantization telecommunications signals</br>
                 <b>• &nbsp &nbsp</b> biometrics (recognition of voice)</br>
-                <b>• &nbsp &nbsp</b> subjective and objective methods for assessing the quality of voice signals</br>
                 <b>• &nbsp &nbsp</b> basic knowledge of lossy compression (e.g. ADM, ADPCM, LPC, MPEG)</br>
             </p>
         </div>
@@ -262,11 +258,10 @@
         <div class="kol-12-2">
             <p>
                 <b>• &nbsp &nbsp</b> build a website using HTML, CSS (from scratch)</br>
-                <b>• &nbsp &nbsp</b> building a website based on CMS system</br>
                 <b>• &nbsp &nbsp</b> work with BOOTSTRAP and others frameworks</br>
                 <b>• &nbsp &nbsp</b> work with CMS systems like WORDPRESS and others</br> 
                 <b>• &nbsp &nbsp</b> use Google Analytics</br> 
-                <b>• &nbsp &nbsp</b> Photoshop, Dreamweaver, Corel, Total Commander</br> 
+                <b>• &nbsp &nbsp</b> Adobe Photoshop, Dreamweaver, Corel, Total Commander</br> 
             </p>
         </div>
     </div>
