wersja w ktorej wystartowalem w netcompany

--- a/print/index.html
+++ b/print/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-<title>&Rscr;zeźniak</title>
+<title>&#8477;zeźniak</title>
 
 <link rel="icon" type="image/png" href="LOGO.png"/>
 <link rel="stylesheet" href="css/bootstrap.css" />
@@ -23,6 +23,7 @@
 </style></div>
 </head>
 
+<body>
 
     <div id="zdjecie"><img src="wrz.jpg"></div>
 
@@ -49,7 +50,7 @@
                     Wawrzyniec Maksymilian Rzeźniak</br> 
                     15. 10. 1987</br>
                     22-400 Zamosc</br>
-                    tel: 696473466, email: wawrzyniec.rzezniak@gmail.com</br>
+                    <!--tel: 696473466, -->email: wawrzyniec.rzezniak@gmail.com</br>
                 </p>
             </div>
     </div>
@@ -93,12 +94,12 @@
                 <p class="wys">
                     2015-now</br>
                     </br></br>
-                    2016</br>
                     </br></br>
+                    </br></br>
+                    </br>
                     2015</br></br>
                     2014-now</br>
                 </br>
-                    2013</br>
                     2012-2013</br>
                     </br>
                     </br>
@@ -108,19 +109,22 @@
             </div>
             <div class="kol-2-b">
                 <p>
-                    <b>JAVA DEVELOPER - National Police Headquarters, Warszawa</b></br>
-                    Outsourcing project organized by <b>Nexio Management</b>. Developing and maintaining reporting system of Police (SESPol) - front-end, back-end.</br>
-                    <b>SOFTWARE DEVELOPER - GMC Software, Warszawa / Barcelona</b></br>
-                    Outsourcing project organized by <b>Nexio Management</b>. Building tools to generating documents for banking and insurance sector. Work in an international team. </br>
+                    <b>JAVA DEVELOPER - Nexio Menegemant, Warszawa. Outsourcing projects:</b></br>
+                    <b>&#10070; &nbsp National Police Headquarters, Warszawa</b></br>
+                    <span style="margin-left:31px">Developing and maintaining "Electronic Reporting System in the Police" (SESPol), building </span>
+                    <span style="margin-left:31px">forms, generate reports, implementation of the system on the production: </br>
+                    <span style="margin-left:31px">front-end, back-end</span><br>
+                    <b>&#10070; &nbsp GMC Software, Warszawa. </b></br>
+                    <span style="margin-left:31px">Building tools to generating documents for banking and insurance sector. Work in an  </span> 
+                    <span style="margin-left:31px">international team. Work with Inspire Designer Software</span></br>
                     <b>SOFTWARE TESTER / Single - RAN TESTER - Nokia Solutions and Networks, </b>  </BR>Wrocław  Nokia Academy 5 Edition</br>
                     <b>WEB DESIGNER / WEBSITE ADMINISTRATOR</b> for Artist Natalia Pospieszalska:</br>
                     <a href="http://www.nataliapospieszalska.pl"><b>&bullet; &nbsp &nbsp</b>www.nataliapospieszalska.pl</a></br>
-                    <b>MOBILE APPLICATION DEVELOPER</b> - own projects</br>
                     RECORD PRODUCER / SOUND ENGINEER:</br>
                     <b>&bullet; &nbsp &nbsp</b>Akademickie Radio Luz, Wroclaw</br>
                     <b>&bullet; &nbsp &nbsp</b>Katolickie Radio Zamosc, Zamosc (apprenticeship)</br> 
                     <b>CO-CREATOR OF FAMILY BUSINESS - GALERIA SZUR:</b></br>
-                    <b>&bullet; &nbsp &nbsp</b>building complete network consist of routers, printers, computers, access points, ets</br> 
+                    <b>&bullet; &nbsp &nbsp</b>building complete network consist of routers, printers, computers, access points, ets</br>
                 </p>
             </div>
 
@@ -151,7 +155,7 @@
             <p>
                 <b>&bullet; &nbsp &nbsp</b>ENGLISH (B2 level) – fluent, GERMAN (A1 level) – basic, POLISH – native, Russian – basic
             </br>
-            <b>&bullet; &nbsp &nbspJava SE / EE, SQL, HTML, CSS, JSP, Spring, Hibernate, TortoiseSVN</b></br>
+            <b>&bullet; &nbsp &nbspJava SE / EE, SQL, HTML, CSS, JSP, Struts 2, TortoiseSVN</b></br>
             <b>&bullet; &nbsp &nbspGSM / EDGE, WCDMA, HSDPA / HSUPA, LTE / LTE-Advanced</b> </br>
             <b>&bullet; &nbsp &nbsp</b>Tomcat, TCP / IP, Linux, MATLAB</br>
             <b>&bullet; &nbsp &nbsp</b>NetBeans, Eclipse ADT, Android Studio, Builder C++, Visual Studio, Git / GitHub </br> 
@@ -173,12 +177,12 @@
         </br>
         </br>
         </br>
-        <div id="adnotacja1">
-   <!--      <p>
+        <!--<div id="adnotacja1">
+        <p>
             I hereby agree for processing my personal information included in my offer strictly for the purposes of job recruitment in accordance</br>
             with the act on protection of personal data (issued 29 th August 1997, consolidated text:  Dz. U. z 2002r. Nr 101, poz. 926 ze zm.).
-        </p> -->
-    </div>
+        </p>
+        </div>-->
     </div>
 
 
@@ -195,18 +199,19 @@
          <h3>Knowlage of:</h3>
          <p>
             <b>• &nbsp &nbsp</b> Java SE / EE</br>
-            <b>• &nbsp &nbsp</b> JSP / JSF / Struts 2</br>
-            <b>• &nbsp &nbsp</b> Tomcat / Git / TortoiseSVN / SourceTree </br>
-            <b>• &nbsp &nbsp</b> Linux / UNIX / TCP / IP</br>
-            <b>• &nbsp &nbsp</b> MATLAB, Praat Framework</br>
-            <b>• &nbsp &nbsp</b> SW / HW testing</br>
+            <b>• &nbsp &nbsp</b> JSP, HTML, CSS </br>
             <b>• &nbsp &nbsp</b> Software design patterns </br>
+            <b>• &nbsp &nbsp</b> Linux / UNIX</br>
+            <b>• &nbsp &nbsp</b> TCP / IP</br>
+            <b>• &nbsp &nbsp</b> SW / HW testing</br>
+            <b>• &nbsp &nbsp</b> SQL, UML, Git</br>
+            <b>• &nbsp &nbsp</b> MATLAB, Praat Framework</br>
         </p>
         <h3>Basic knowlage:</h3>    
         <p>
             <b>• &nbsp &nbsp</b> Spring</br> 
             <b>• &nbsp &nbsp</b> Hibernate</br> 
-            <b>• &nbsp &nbsp</b> PrimeFaces</br> 
+            <b>• &nbsp &nbsp</b> JSF, PrimeFaces</br> 
             <b>• &nbsp &nbsp</b> JavaScript</br> 
             <b>• &nbsp &nbsp</b> Android Platform </br>
             <b>• &nbsp &nbsp</b> C / C++</br>
@@ -241,6 +246,7 @@
                 &nbsp &nbsp &nbsp &nbspHandovers, Quality of Service in LTE</br>
                 <b>• &nbsp &nbsp</b> modulation (e.g. PSK, QAM, OFDM) and quantization telecommunications signals</br>
                 <b>• &nbsp &nbsp</b> biometrics (recognition of voice)</br>
+                <b>• &nbsp &nbsp</b> subjective and objective methods for assessing the quality of voice signals</br>
                 <b>• &nbsp &nbsp</b> basic knowledge of lossy compression (e.g. ADM, ADPCM, LPC, MPEG)</br>
             </p>
         </div>
@@ -260,7 +266,7 @@
                 <b>• &nbsp &nbsp</b> work with BOOTSTRAP and others frameworks</br>
                 <b>• &nbsp &nbsp</b> work with CMS systems like WORDPRESS and others</br> 
                 <b>• &nbsp &nbsp</b> use Google Analytics</br> 
-                <b>• &nbsp &nbsp</b> Adobe Photoshop, Dreamweaver, Corel, Total Commander</br> 
+                <b>• &nbsp &nbsp</b> Photoshop, Dreamweaver, Corel, Total Commander</br> 
             </p>
         </div>
     </div>
