netcompany cv update

--- a/print/index.html
+++ b/print/index.html
@@ -92,37 +92,43 @@
     <div class="wiersz">
             <div class="kol-1-b">
                 <p class="wys">
-                    2015-now</br>
-                    </br></br>
-                    </br></br>
-                    </br></br>
+                    2017-now</br>
+                    </br>
+                    </br>
+                    </br>
+                    </br>
+                    2015-2016</br>
+                    </br>
+                    </br>
+                    </br>
                     </br>
                     2015</br></br>
                     2014-now</br>
                 </br>
                     2012-2013</br>
                     </br>
-                    </br>
-
                     2007 - now</br> 
                 </p>    
             </div>
             <div class="kol-2-b">
                 <p>
-                    <b>JAVA DEVELOPER - Nexio Menegemant, Warszawa. Outsourcing projects:</b></br>
-                    <b>&#10070; &nbsp National Police Headquarters, Warszawa</b></br>
+                    <b>CONSULTANT - NETCOMPANY, Warsaw</b></br>
+                    <b>&#10070; &nbsp FROMTU project for Maersk</b>
+                    </br>
+                    <span style="margin-left:31px">Building application from the scratch, developing, maintenance, bugfixing and testing.</span>
+                    <span style="margin-left:31px">Building start-up application based on design and consultations</span>
+                    <br>
+                    <span style="margin-left:31px">front-end</span><br>
+                    <b>JAVA DEVELOPER - Nexio Menegemant, Warsaw. Outsourcing projects:</b></br>
+                    <b>&#10070; &nbsp National Police Headquarters, Warsaw</b></br>
                     <span style="margin-left:31px">Developing and maintaining "Electronic Reporting System in the Police" (SESPol), building </span>
                     <span style="margin-left:31px">forms, generate reports, implementation of the system on the production: </br>
                     <span style="margin-left:31px">front-end, back-end</span><br>
-                    <b>&#10070; &nbsp GMC Software, Warszawa. </b></br>
-                    <span style="margin-left:31px">Building tools to generating documents for banking and insurance sector. Work in an  </span> 
-                    <span style="margin-left:31px">international team. Work with Inspire Designer Software</span></br>
-                    <b>SOFTWARE TESTER / Single - RAN TESTER - Nokia Solutions and Networks, </b>  </BR>Wrocław  Nokia Academy 5 Edition</br>
+                    <b>MOBILE TECHNOLOGIES SPECIALIST - Nokia Solutions and Networks, </b>  </BR>Wrocław  Nokia Academy 5 Edition</br>
                     <b>WEB DESIGNER / WEBSITE ADMINISTRATOR</b> for Artist Natalia Pospieszalska:</br>
                     <a href="http://www.nataliapospieszalska.pl"><b>&bullet; &nbsp &nbsp</b>www.nataliapospieszalska.pl</a></br>
                     RECORD PRODUCER / SOUND ENGINEER:</br>
                     <b>&bullet; &nbsp &nbsp</b>Akademickie Radio Luz, Wroclaw</br>
-                    <b>&bullet; &nbsp &nbsp</b>Katolickie Radio Zamosc, Zamosc (apprenticeship)</br> 
                     <b>CO-CREATOR OF FAMILY BUSINESS - GALERIA SZUR:</b></br>
                     <b>&bullet; &nbsp &nbsp</b>building complete network consist of routers, printers, computers, access points, ets</br>
                 </p>
@@ -155,10 +161,9 @@
             <p>
                 <b>&bullet; &nbsp &nbsp</b>ENGLISH (B2 level) – fluent, GERMAN (A1 level) – basic, POLISH – native, Russian – basic
             </br>
-            <b>&bullet; &nbsp &nbspJava SE / EE, SQL, HTML, CSS, JSP, Struts 2, TortoiseSVN</b></br>
-            <b>&bullet; &nbsp &nbspGSM / EDGE, WCDMA, HSDPA / HSUPA, LTE / LTE-Advanced</b> </br>
-            <b>&bullet; &nbsp &nbsp</b>Tomcat, TCP / IP, Linux, MATLAB</br>
-            <b>&bullet; &nbsp &nbsp</b>NetBeans, Eclipse ADT, Android Studio, Builder C++, Visual Studio, Git / GitHub </br> 
+            <b>&bullet; &nbsp &nbspJava SE/EE, JavaScript, SQL, HTML, CSS</b></br>
+            <b>&bullet; &nbsp &nbspSpring MVC, Spring Boot, Hibernate, Android Platform, ReactJS, AngularJS (basic)</b></br>
+            <b>&bullet; &nbsp &nbsp</b>IntelliJ IDEA, NetBeans, Eclipse ADT, Android Studio, SourceTree, Bitbucket </br>
         </div>               
     </div>
 
@@ -198,23 +203,19 @@
 
          <h3>Knowlage of:</h3>
          <p>
-            <b>• &nbsp &nbsp</b> Java SE / EE</br>
-            <b>• &nbsp &nbsp</b> JSP, HTML, CSS </br>
+            <b>• &nbsp &nbsp</b> Java SE / EE, JavaScript, SQL, HTML, CSS</br>
+            <b>• &nbsp &nbsp</b> ReactJS, Redux</br>
+            <b>• &nbsp &nbsp</b> Spring MVC, Spring Boot</br> 
+            <b>• &nbsp &nbsp</b> Hibernate</br> 
+            <b>• &nbsp &nbsp</b> Android Platform </br>
             <b>• &nbsp &nbsp</b> Software design patterns </br>
             <b>• &nbsp &nbsp</b> Linux / UNIX</br>
             <b>• &nbsp &nbsp</b> TCP / IP</br>
-            <b>• &nbsp &nbsp</b> SW / HW testing</br>
-            <b>• &nbsp &nbsp</b> SQL, UML, Git</br>
-            <b>• &nbsp &nbsp</b> MATLAB, Praat Framework</br>
         </p>
         <h3>Basic knowlage:</h3>    
         <p>
-            <b>• &nbsp &nbsp</b> Spring</br> 
-            <b>• &nbsp &nbsp</b> Hibernate</br> 
-            <b>• &nbsp &nbsp</b> JSF, PrimeFaces</br> 
-            <b>• &nbsp &nbsp</b> JavaScript</br> 
-            <b>• &nbsp &nbsp</b> Android Platform </br>
-            <b>• &nbsp &nbsp</b> C / C++</br>
+            <b>• &nbsp &nbsp</b> Ionic</br> 
+            <b>• &nbsp &nbsp</b> AngularJS </br> 
         </p>
     </div>
 </div>
@@ -234,7 +235,6 @@
                 <b>• &nbsp &nbsp</b> simulation elements of the telecommunications system in MATLAB:</br>
                 &nbsp &nbsp &nbsp &nbsp- transmitter (burst transmission, QPSK),  transmission medium (with ISI, AWGN), receiver</br>  &nbsp  &nbsp &nbsp &nbsp (adaptive equalisation DFE)</br> 
                 <b>• &nbsp &nbsp</b> tube amplifier project and simulation (AB1 class, ultralinear push-pull, front-and) in PSpice</br>
-                <b>• &nbsp &nbsp</b> design and simulation of wired and wireless network (Packet Tracer)</br>
                 <b>• &nbsp &nbsp</b> automatic speech recognition based on speech contains emotions (own scripts in Praat</br>
                 &nbsp &nbsp &nbsp &nbspframework)</br>
             </p>
@@ -246,8 +246,6 @@
                 &nbsp &nbsp &nbsp &nbspHandovers, Quality of Service in LTE</br>
                 <b>• &nbsp &nbsp</b> modulation (e.g. PSK, QAM, OFDM) and quantization telecommunications signals</br>
                 <b>• &nbsp &nbsp</b> biometrics (recognition of voice)</br>
-                <b>• &nbsp &nbsp</b> subjective and objective methods for assessing the quality of voice signals</br>
-                <b>• &nbsp &nbsp</b> basic knowledge of lossy compression (e.g. ADM, ADPCM, LPC, MPEG)</br>
             </p>
         </div>
     </div>
@@ -262,10 +260,8 @@
         </div>
         <div class="kol-12-2">
             <p>
-                <b>• &nbsp &nbsp</b> build a website using HTML, CSS (from scratch)</br>
+                <b>• &nbsp &nbsp</b> build a website using ReactJS, HTML, CSS (from scratch)</br>
                 <b>• &nbsp &nbsp</b> work with BOOTSTRAP and others frameworks</br>
-                <b>• &nbsp &nbsp</b> work with CMS systems like WORDPRESS and others</br> 
-                <b>• &nbsp &nbsp</b> use Google Analytics</br> 
                 <b>• &nbsp &nbsp</b> Photoshop, Dreamweaver, Corel, Total Commander</br> 
             </p>
         </div>
