do pracy po netcompany - przymiarki

--- a/print/index.html
+++ b/print/index.html
@@ -92,27 +92,38 @@
     <div class="wiersz">
             <div class="kol-1-b">
                 <p class="wys">
-                    2017-now</br>
+                    2017 - now</br>
                     </br>
                     </br>
                     </br>
                     </br>
-                    2015-2016</br>
+                    </br>
+                    </br>
+                    </br>
+                    </br>
+                    2015 - 2016</br>
                     </br>
                     </br>
                     </br>
                     </br>
                     2015</br></br>
-                    2014-now</br>
+                    2014 - now</br>
                 </br>
-                    2012-2013</br>
+                    2012 - 2013</br>
                     </br>
                     2007 - now</br> 
                 </p>    
             </div>
             <div class="kol-2-b">
                 <p>
-                    <b>CONSULTANT - NETCOMPANY, Warsaw</b></br>
+                    <b>CONSULTANT / SOFTWARE DEVELOPER - NETCOMPANY, Warsaw</b></br>
+                    <b>&#10070; &nbsp BOS project for Arbejdsmarkedets Tillægspension - ATP ( Danish labor market 
+                     <span style="margin-left:31px">supplementary pension fund )</span></b>
+                    </br>
+                    <span style="margin-left:31px">Developing existing application, maintenance, bugfixing and testing. Creating sql scripts</span>
+                    <span style="margin-left:31px">and test data</span>
+                    <br>
+                    <span style="margin-left:31px">front-end, back-end</span><br>
                     <b>&#10070; &nbsp FROMTU project for Maersk</b>
                     </br>
                     <span style="margin-left:31px">Building application from the scratch, developing, maintenance, bugfixing and testing.</span>
@@ -121,8 +132,8 @@
                     <span style="margin-left:31px">front-end</span><br>
                     <b>JAVA DEVELOPER - Nexio Menegemant, Warsaw. Outsourcing projects:</b></br>
                     <b>&#10070; &nbsp National Police Headquarters, Warsaw</b></br>
-                    <span style="margin-left:31px">Developing and maintaining "Electronic Reporting System in the Police" (SESPol), building </span>
-                    <span style="margin-left:31px">forms, generate reports, implementation of the system on the production: </br>
+                    <span style="margin-left:31px">Developing and maintaining "Electronic Reporting System in the Police" (SESPol),  </span>
+                    <span style="margin-left:31px">building forms, generate reports, implementation of the system on the production: </br>
                     <span style="margin-left:31px">front-end, back-end</span><br>
                     <b>MOBILE TECHNOLOGIES SPECIALIST - Nokia Solutions and Networks, </b>  </BR>Wrocław  Nokia Academy 5 Edition</br>
                     <b>WEB DESIGNER / WEBSITE ADMINISTRATOR</b> for Artist Natalia Pospieszalska:</br>
